# strategy-builder-ai

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
api/: __init__.py  auth.py  config.py  database.py  db_models.py  main.py  schemas.py
api/routes/: admin.py  analysis.py  auth.py  signals.py  systems.py  users.py
contracts/: README.md  StrategySubscription.sol
strategy_engine/: __init__.py  models.py
strategy_engine/core/: __init__.py  coherency.py  composite.py  validation.py  zscore.py
strategy_engine/data/: __init__.py  base.py  coingecko.py  yahoo.py
strategy_engine/ml/: __init__.py  correlation.py  decay.py  regime.py
tests/: test_coherency.py  test_composite.py  test_models.py  test_validation.py  test_zscore.py
web/: package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx  providers.tsx
web/src/app/admin/: layout.tsx  page.tsx
web/src/app/admin/users/: page.tsx
web/src/app/dashboard/: layout.tsx  page.tsx
web/src/app/dashboard/portfolio/: page.tsx
web/src/app/dashboard/settings/: page.tsx
web/src/app/dashboard/signals/: page.tsx
web/src/app/dashboard/systems/: page.tsx
web/src/app/dashboard/systems/[id]/: page.tsx
web/src/app/dashboard/systems/new/: page.tsx
web/src/app/dashboard/systems/new/trend/: page.tsx
web/src/app/dashboard/systems/new/valuation/: page.tsx
web/src/components/: connect-wallet.tsx  signal-card.tsx  tier-badge.tsx
web/src/components/auth/: auth-provider.tsx
web/src/components/builder/: coherency-heatmap.tsx  indicator-form.tsx  ml-progress.tsx  price-chart.tsx  score-gauge.tsx  section.tsx  signal-matrix.tsx  validation-panel.tsx
web/src/lib/: api.ts  wagmi.ts
